8328150: [lworld] Adjust flags to "--enable-preview" clear out EnableValhalla and EnablePrimitiveClasses