@@ -42,12 +42,10 @@ import jdk.test.lib.Asserts;
  * @library /test/lib /
  * @requires (os.simpleArch == "x64" | os.simpleArch == "aarch64")
  * @enablePreview
+ * @modules java.base/jdk.internal.value
+ *          java.base/jdk.internal.vm.annotation
  * @compile GetfieldChains.jcod
- * @compile --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED
- *          --add-exports java.base/jdk.internal.value=ALL-UNNAMED TestGetfieldChains.java
- * @run main/othervm/timeout=300 --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED
- *                               --add-exports java.base/jdk.internal.value=ALL-UNNAMED
- *                               compiler.valhalla.inlinetypes.TestGetfieldChains
+ * @run main/othervm/timeout=300 compiler.valhalla.inlinetypes.TestGetfieldChains
  */
 
 @ImplicitlyConstructible
