@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2022, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -33,8 +33,7 @@ import static org.junit.Assert.*;
  * @summary Test feature flags reflect command line flags
  * @modules java.base/jdk.internal.misc
  * @run junit/othervm -Dexpected=true ValhallaFeaturesTest
- * @run junit/othervm -XX:+EnableValhalla -Dexpected=true ValhallaFeaturesTest
- * @run junit/othervm -XX:-EnableValhalla -Dexpected=false ValhallaFeaturesTest
+ * @run junit/othervm --enable-preview -Dexpected=true ValhallaFeaturesTest
  */
 
 public class ValhallaFeaturesTest {
@@ -45,8 +44,8 @@ public class ValhallaFeaturesTest {
     @Test
     public void checkEnable() {
         boolean enabled = ValhallaFeatures.isEnabled();
-        System.out.println("EnableValhalla: " + enabled);
-        assertEquals("EnableValhalla Flag", expected, enabled);
+        System.out.println("ValhallaFeatures.isEnabled(): " + enabled);
+        assertEquals("ValhallaFeatures.isEnabled() Flag", expected, enabled);
     }
 
     @Test
@@ -55,7 +54,7 @@ public class ValhallaFeaturesTest {
             // Throwing an exception is an error
             ValhallaFeatures.ensureValhallaEnabled();
         } else {
-            assertThrows("EnableValhalla Flag", UnsupportedOperationException.class,
+            assertThrows("ValhallaFeatures.ensureValhallaEnabled() Flag", UnsupportedOperationException.class,
                     () -> ValhallaFeatures.ensureValhallaEnabled());
         }
     }
